# enum_class_stringify

./: CMakeLists.txt  LICENSE  README.md  enum_class_stringify.h
.github/workflows/: cmake-build-and-test.yml
test/: testclass.cpp  testclass.h  tests.cpp
